Added tests for auto configuration and improved swagger ui view (added JSON-RPC marker)

--- a/src/main/resources/static/swagger-ui.html
+++ b/src/main/resources/static/swagger-ui.html
@@ -28,6 +28,9 @@
       background: #fafafa;
     }
   </style>
+
+  <!-- JSON-RPC extension -->
+  <link rel="stylesheet" type="text/css" href="static/swagger-json-rpc-style.css" >
 </head>
 
 <body>
@@ -71,6 +74,8 @@
 <script src="webjars/springfox-swagger-ui/swagger-ui-bundle.js?v=2.9.2"> </script>
 <script src="webjars/springfox-swagger-ui/swagger-ui-standalone-preset.js?v=2.9.2"> </script>
 <script src="webjars/springfox-swagger-ui/springfox.js?v=2.9.2"> </script>
+
+<!-- JSON-RPC extension -->
 <script src="static/swagger-json-rpc-plugin.js"> </script>
 </body>
 
