--- a/src/main/resources/META-INF/resources/swagger-ui.html
+++ b/src/main/resources/META-INF/resources/swagger-ui.html
@@ -30,7 +30,7 @@
   </style>
 
   <!-- JSON-RPC extension -->
-  <link rel="stylesheet" type="text/css" href="static/swagger-json-rpc-style.css" >
+  <link rel="stylesheet" type="text/css" href="swagger-json-rpc-style.css" >
 </head>
 
 <body>
@@ -76,7 +76,7 @@
 <script src="webjars/springfox-swagger-ui/springfox.js?v=2.9.2"> </script>
 
 <!-- JSON-RPC extension -->
-<script src="static/swagger-json-rpc-plugin.js"> </script>
+<script src="swagger-json-rpc-plugin.js"> </script>
 </body>
 
 </html>
